...

      // Переход на главный экран
      if (mounted) {
        context.go('/main');
      }
    } on Exception catch (e) {
      authError.setError(e.toString().replaceFirst('Exception: ', ''));
    } finally {
      authLoading.setLoading(false);
    }
  }

  @override
...
